# GDASApp

./: .gitmodules  CMakeLists.txt  build.sh
bundle/: CMakeLists.txt  script.sh  script2.sh
modulefiles/GDAS/: container.intel.lua  hera.intel.lua
ush/: detect_machine.sh
